tmux-thumbs; zsh theme; nvim laziness

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -11,13 +11,10 @@ set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 # default command
 # set-option -g default-command "reattach-to-user-namespace -l zsh"
 
-# tmux-fingers settings
-set -g @fingers-key f
-# Launches tmux-open-nvim on Ctrl+[key] in fingers mode
-set -g @fingers-ctrl-action "xargs -I {} tmux run-shell 'cd #{pane_current_path}; ~/.tmux/plugins/tmux-open-nvim/scripts/ton {} > ~/.tmux/plugins/tmux-open-nvim/ton.log'"
-# system open command on Shift+[key] in fingers mode
-set -g @fingers-shift-action ':open:'
-
+# tmux-thumbs settings
+set -g @thumbs-key f
+# Launches tmux-open-nvim on Shift+[key] in fingers mode
+set -g @thumbs-upcase-command  "xargs -I {} tmux run-shell 'cd #{pane_current_path}; ~/.tmux/plugins/tmux-open-nvim/scripts/ton {} > ~/.tmux/plugins/tmux-open-nvim/ton.log'"
 # -- app bindings -----------------------------------------------------------------------
 
 # edit nvim configuration
@@ -175,6 +172,8 @@ set -g @plugin 'tmux-plugins/tmux-resurrect' # save/restore tmux sessions
 set -g @plugin 'tmux-plugins/tmux-continuum' # auto save/restore tmux sessions on close/open tmux
 set -g @plugin 'erikw/tmux-dark-notify' # dynamic theme dark/light modes
 set -g @plugin 'trevarj/tmux-open-nvim' # open files in nvim
-set -g @plugin 'Morantron/tmux-fingers' # easy-motion-like text selector
+set -g @plugin 'fcsonline/tmux-thumbs'
+
+run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
 
 run -b '~/.tmux/plugins/tpm/tpm'
