tmux: fix tmux-open-nvim + thumbs; nvim: display winbar

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -13,8 +13,10 @@ set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
 # tmux-thumbs settings
 set -g @thumbs-key f
+set -g @thumbs-unique enabled
+set -g @thumbs-command 'echo -n {} | pbcopy'
 # Launches tmux-open-nvim on Shift+[key] in fingers mode
-set -g @thumbs-upcase-command  "xargs -I {} tmux run-shell 'cd #{pane_current_path}; ~/.tmux/plugins/tmux-open-nvim/scripts/ton {} > ~/.tmux/plugins/tmux-open-nvim/ton.log'"
+set -g @thumbs-upcase-command  "tmux run-shell \"cd #{pane_current_path}; ~/.tmux/plugins/tmux-open-nvim/scripts/ton {} > ~/.tmux/plugins/tmux-open-nvim/ton.log\""
 # -- app bindings -----------------------------------------------------------------------
 
 # edit nvim configuration
