--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -153,7 +153,7 @@ set -g @catppuccin_date_time_text "%H:%M"
 
 set -g @catppuccin_window_status_enable "yes"
 
-set -g @catppuccin_status_modules "application session cpu battery date_time"
+set -g @catppuccin_status_modules "application session"
 set -g @catppuccin_status_left_separator  ""
 set -g @catppuccin_status_right_separator " "
 set -g @catppuccin_status_right_separator_inverse "yes"
