nvim: snippets, spell, copilot-chat plugin; brew: trash; tmux: commands; zsh: cz alias

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -20,7 +20,7 @@ set -g @thumbs-upcase-command  "tmux run-shell \"cd #{pane_current_path}; ~/.tmu
 # -- app bindings -----------------------------------------------------------------------
 
 # edit nvim configuration
-bind v new-window -n "~/.config/nvim/" "cd ~/.config/nvim && nvim ~/.config/nvim/lua/config/lazy.lua && tmux display \"nvim config updated\""
+bind v new-window -n "~/.config/nvim/" "cd ~/.config/nvim && nvim ~/.config/nvim/lua/ && tmux display \"nvim config updated\""
 
 # open notes
 bind n new-window -n "zettel" "tmuxp load -y zettel"
