nvim: telescope is back, cwd mappings; areospace keepass alt+p

--- a/dot_aerospace.toml
+++ b/dot_aerospace.toml
@@ -91,6 +91,7 @@ alt-f = 'exec-and-forget open -n /Applications/Firefox\ Developer\ Edition.app/'
 alt-c = 'exec-and-forget open -n /Applications/Google\ Chrome.app/'
 alt-m = 'exec-and-forget open -n /Applications/MEGAsync.app/'
 alt-s = 'exec-and-forget open -n /Applications/Slack.app/'
+alt-p = 'exec-and-forget open -n /Applications/KeePassXC.app/'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#layout
 alt-slash = 'layout tiles horizontal vertical'
