nvim and lazygit
~ nvim:
  + fix mappings
  + cutlass
  - satellite
  - harpoon
  + undo tree
+ lazygit:
  + editing in remove nvim

--- a/dot_config/lazygit/config.yml
+++ b/dot_config/lazygit/config.yml
@@ -2,6 +2,9 @@ promptToReturnFromSubprocess: false
 os:
   # https://github.com/jesseduffield/lazygit/issues/3064
   openLink: open -n "$(echo {{link}} | sed 's/%2F/\//g')"
+  edit: "nvr --remote-tab-wait +'setl bufhidden=wipe' {{filename}}"
+  editAtLine: "nvr --remote-tab-wait +'setl bufhidden=wipe | {{line}}' {{filename}}"
+  editAtLineAndWait: "nvr --remote-tab-wait +'setl bufhidden=wipe | {{line}}' {{filename}}"
 gui:
   nerdFontsVersion: "3"
   border: "rounded"
