--- a/dot_aerospace.toml
+++ b/dot_aerospace.toml
@@ -45,6 +45,9 @@ default-root-container-orientation = 'auto'
 # See https://nikitabobko.github.io/AeroSpace/guide#key-mapping
 key-mapping.preset = 'qwerty'
 
+[workspace-to-monitor-force-assignment]
+1 = 'Built-in Retina Display'
+
 # Gaps between windows (inner-*) and between monitor edges (outer-*).
 # Possible values:
 # - Constant:     gaps.outer.top = 8
@@ -57,7 +60,7 @@ inner.horizontal = 0
 inner.vertical = 0
 outer.left = 0
 outer.bottom = 0
-outer.top = 35
+outer.top = [{monitor."Built-in Retina Display" = 0}, 35]
 outer.right = 0
 
 # See https://nikitabobko.github.io/AeroSpace/guide#exec-env-vars
