--- a/dot_aerospace.toml
+++ b/dot_aerospace.toml
@@ -47,6 +47,7 @@ key-mapping.preset = 'qwerty'
 
 [workspace-to-monitor-force-assignment]
 1 = 'Built-in Retina Display'
+7 = 'LG ULTRAWIDE'
 
 # Gaps between windows (inner-*) and between monitor edges (outer-*).
 # Possible values:
@@ -91,7 +92,7 @@ PATH = '/opt/homebrew/bin:/opt/homebrew/sbin:${PATH}'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#exec-and-forget
 alt-w = 'exec-and-forget open -n /Applications/WezTerm.app/'
-alt-t = 'exec-and-forget open -n /Applications/Telegram.app/'
+alt-t = 'exec-and-forget open -n /Applications/Telegram\ Desktop.app/'
 alt-f = 'exec-and-forget open -n /Applications/Firefox\ Developer\ Edition.app/'
 alt-c = 'exec-and-forget open -n /Applications/Google\ Chrome.app/'
 alt-m = 'exec-and-forget open -n /Applications/MEGAsync.app/'
