nvim, zsh, sbar, tmux
nvim:
- markdown.nvim => markview.nvim
- gitlinker => fugitive
- +advanced-git-search
sbar: aerospaces
tmux: reload zsh on <prefix>C-z

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -28,7 +28,7 @@ bind n new-window -n "zettel" "tmuxp load -y zettel"
 bind a new-window -n "~/.config/wezterm/" "nvim ~/.config/wezterm/wezterm.lua"
 
 # edit zsh configuration
-bind C-z new-window -n "$ZDOTDIR" "nvim $ZDOTDIR \; tmux display \"zsh updated\""
+bind C-z send-keys "exec zsh" Enter \; display "zsh reloaded"
 
 # Reload tmux config with <prefix>-r.
 bind-key r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
