tmux: tmux-thumbs => tmux-fingers
- :line:col works

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -12,11 +12,11 @@ set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 # set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # tmux-thumbs settings
-set -g @thumbs-key f
-set -g @thumbs-unique enabled
-set -g @thumbs-command 'echo -n {} | pbcopy'
-# Launches tmux-open-nvim on Shift+[key] in fingers mode
-set -g @thumbs-upcase-command  "tmux run-shell \"cd #{pane_current_path}; ~/.tmux/plugins/tmux-open-nvim/scripts/ton {} > ~/.tmux/plugins/tmux-open-nvim/ton.log\""
+set -g @fingers-key f
+# Overrides matching file paths with :[line]:[col] at the end
+set -g @fingers-pattern-0 "(([.\\w\\-~\\$@]+)(\\/?[\\w\\-@]+)+\\/?)\\.([\\w]+)(:\\d*:\\d*)?"
+# Launches helper script on Ctrl+[key] in fingers mode
+set -g @fingers-ctrl-action "xargs -I {} tmux run-shell 'cd #{pane_current_path}; ~/.tmux/plugins/tmux-open-nvim/scripts/ton {} > ~/.tmux/plugins/tmux-open-nvim/ton.log'"s
 # -- app bindings -----------------------------------------------------------------------
 
 # edit nvim configuration
@@ -174,7 +174,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect' # save/restore tmux sessions
 set -g @plugin 'tmux-plugins/tmux-continuum' # auto save/restore tmux sessions on close/open tmux
 set -g @plugin 'erikw/tmux-dark-notify' # dynamic theme dark/light modes
 set -g @plugin 'trevarj/tmux-open-nvim' # open files in nvim
-set -g @plugin 'fcsonline/tmux-thumbs'
+set -g @plugin 'Morantron/tmux-fingers'
 
 run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
 
