wezterm+tmux+zsh: kitty image protocol via kitty-xterm

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -4,9 +4,20 @@
 unbind C-a
 set -g prefix C-s
 
-# Use tmux 256 colors and enable italics.
-set -g default-terminal "tmux-256color"
+# Use $TERM (configured in wezterm) and enable undercurl
+set -g default-terminal "${TERM}"
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
+
+# https://github.com/3rd/image.nvim/?tab=readme-ov-file#tmux
+# This is needed by the image.nvim plugin
+# set -gq allow-passthrough on
+# This is related to the `tmux_show_only_in_active_window = true,` config in
+# image.nvim
+set -g visual-activity off
+
+set -g allow-passthrough all
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
 
 # default command
 # set-option -g default-command "reattach-to-user-namespace -l zsh"
