--- a/dot_config/lazygit/config.yml
+++ b/dot_config/lazygit/config.yml
@@ -36,6 +36,9 @@ customCommands:
           - name: "testing"
             description: "a testing branch"
             value: "test"
+          - name: "chore"
+            description: "a chore/infra branch"
+            value: "chore"
       - type: "input"
         title: "What is the new branch name?"
         key: "BranchName"
