tmux: disable fingers; upgrade lazyvim to latest

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -23,11 +23,11 @@ set -ga update-environment TERM_PROGRAM
 # set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # tmux-thumbs settings
-set -g @fingers-key f
+# set -g @fingers-key f
 # Overrides matching file paths with :[line]:[col] at the end
-set -g @fingers-pattern-0 "(([.\\w\\-~\\$@]+)(\\/?[\\w\\-@]+)+\\/?)\\.([\\w]+)(:\\d*:\\d*)?"
+# set -g @fingers-pattern-0 "(([.\\w\\-~\\$@]+)(\\/?[\\w\\-@]+)+\\/?)\\.([\\w]+)(:\\d*:\\d*)?"
 # Launches helper script on Ctrl+[key] in fingers mode
-set -g @fingers-ctrl-action "xargs -I {} tmux run-shell 'cd #{pane_current_path}; ~/.tmux/plugins/tmux-open-nvim/scripts/ton {} > ~/.tmux/plugins/tmux-open-nvim/ton.log'"s
+# set -g @fingers-ctrl-action "xargs -I {} tmux run-shell 'cd #{pane_current_path}; ~/.tmux/plugins/tmux-open-nvim/scripts/ton {} > ~/.tmux/plugins/tmux-open-nvim/ton.log'"s
 # -- app bindings -----------------------------------------------------------------------
 
 # edit nvim configuration
@@ -185,6 +185,6 @@ set -g @plugin 'tmux-plugins/tmux-resurrect' # save/restore tmux sessions
 set -g @plugin 'tmux-plugins/tmux-continuum' # auto save/restore tmux sessions on close/open tmux
 set -g @plugin 'erikw/tmux-dark-notify' # dynamic theme dark/light modes
 set -g @plugin 'trevarj/tmux-open-nvim' # open files in nvim
-set -g @plugin 'Morantron/tmux-fingers'
+# set -g @plugin 'Morantron/tmux-fingers'
 
 run -b '~/.tmux/plugins/tpm/tpm'
