wezterm: local mux; tmux: sesh

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -52,6 +52,23 @@ bind C-n send-keys ":q!" Enter \; split-window -h 'nvim'
 # clear scroll-buffer
 bind-key k clear-history; bind k send-keys " clear"\; send-keys "Enter"
 
+bind-key "T" run-shell "sesh connect \"$(
+  sesh list --icons | fzf-tmux -p 55%,60% \
+	  --color=\$(defaults read -globalDomain AppleInterfaceStyle &> /dev/null && echo $FZF_MOCHA_COLORS || echo $FZF_LATTE_COLORS) \
+    --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
+    --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+    --bind 'tab:down,btab:up' \
+    --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
+    --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t --icons)' \
+    --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c --icons)' \
+    --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
+    --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+    --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
+)\""
+
+bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt
+set -g detach-on-destroy off  # don't exit from tmux when closing a session
+
 # - pane & window & session bindings --------------------------------------------------------------------------
 
 # When scrolling with mouse wheel, reduce number of scrolled rows per tick to 1.
