--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -1,12 +1,13 @@
 adjust-box-thickness = 150%
-adjust-cell-height = 21
+adjust-cell-height = 18
 adjust-cursor-height = 47%
 confirm-close-surface = false
-font-family = "JetBrainsMono NFM"
-font-size = 15
+font-family = "Hack Nerd Font Mono"
+font-size = 18
 macos-titlebar-style = "hidden"
 mouse-hide-while-typing = true
 quit-after-last-window-closed = true
 theme = "dark:catppuccin-mocha,light:catppuccin-latte"
 window-padding-x = 0,0 
 window-padding-y = 0,0 
+shell-integration = zsh
