aerospace, fish, cursor
- aerospace: Cursor on Workspace 8
- fish: whisper path
- cursor: mcp settings added

--- a/dot_aerospace.toml
+++ b/dot_aerospace.toml
@@ -187,3 +187,7 @@ run = 'move-node-to-workspace 4'
 [[on-window-detected]]
 if.app-name-regex-substring = 'firefox'
 run = 'move-node-to-workspace 2'
+
+[[on-window-detected]]
+if.app-name-regex-substring = 'cursor'
+run = 'move-node-to-workspace 8'
