--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -1,13 +1,21 @@
+# vi: ft=conf
+
 adjust-box-thickness = 150%
-adjust-cell-height = 18
+adjust-cell-height = 21
 adjust-cursor-height = 47%
+cursor-invert-fg-bg = true
+command = /opt/homebrew/opt/fish/bin/fish --login --interactive
 confirm-close-surface = false
-font-family = "Hack Nerd Font Mono"
-font-size = 18
+font-family = "JetBrainsMono NFM"
+font-size = 16
 macos-titlebar-style = "hidden"
 mouse-hide-while-typing = true
 quit-after-last-window-closed = true
 theme = "dark:catppuccin-mocha,light:catppuccin-latte"
 window-padding-x = 0,0 
 window-padding-y = 0,0 
-shell-integration = zsh
+
+# -- KEYBINDINGS -------------------------------------------------------------------------------------------------------
+
+keybind = global:alt+escape=toggle_quick_terminal
+keybind = ctrl+m=text:\x0D
