nvim md rules; yazi config; zsh astra

--- a/dot_config/yazi/yazi.toml
+++ b/dot_config/yazi/yazi.toml
@@ -1,7 +1,7 @@
-[manager]
+[mgr]
 ratio = [2, 2, 4]
 
-[[manager.prepend_keymap]]
+[[mgr.prepend_keymap]]
 on = ["F"]
 run = "plugin smart-filter"
 desc = "Smart filter"
