--- a/dot_aerospace.toml
+++ b/dot_aerospace.toml
@@ -27,8 +27,11 @@ exec-on-workspace-change = [
 # Notify SketchyBar about focus changes
 # See https://nikitabobko.github.io/AeroSpace/guide#on-focus-changed-callbacks
 on-focus-changed = [
-  'exec-and-forget sketchybar --trigger aerospace_focus_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE',
+'exec-and-forget sketchybar --trigger aerospace_focus_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE',
+'move-mouse window-lazy-center',
 ]
+
+on-focused-monitor-changed = ['move-mouse monitor-lazy-center'] # Mouse lazily follows focused monitor (default in i3)
 
 # Start AeroSpace at login
 start-at-login = true
@@ -107,6 +110,8 @@ alt-c = 'exec-and-forget open -n /Applications/Google\ Chrome.app/'
 alt-m = 'exec-and-forget open -n /Applications/MEGAsync.app/'
 alt-s = 'exec-and-forget open -n /Applications/Slack.app/'
 alt-p = 'exec-and-forget open -n /Applications/KeePassXC.app/'
+
+f10 = "exec-and-forget zsh ~/scripts/aerospace-resize-neovide.sh"
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#layout
 alt-slash = 'layout tiles horizontal vertical'
@@ -205,9 +210,10 @@ alt-shift-l = [
   'exec-and-forget sketchybar --trigger aerospace_leave_service_mode',
 ]
 
-[[on-window-detected]]
-if.app-name-regex-substring = 'neovide'
-run = 'move-node-to-workspace 8'
+# [[on-window-detected]]
+# if.app-name-regex-substring = 'neovide'
+# run = 'move-node-to-workspace 2'
+
 
 [[on-window-detected]]
 if.app-id = 'com.google.Chrome'
@@ -223,7 +229,9 @@ run = 'move-node-to-workspace 4'
 
 [[on-window-detected]]
 if.app-name-regex-substring = 'firefox'
-run = 'move-node-to-workspace 2'
+run = [
+  "move-node-to-workspace 2",
+]
 
 [[on-window-detected]]
 if.app-name-regex-substring = 'cursor'
