--- a/dot_config/lazygit/config.yml
+++ b/dot_config/lazygit/config.yml
@@ -14,8 +14,8 @@ gui:
   showCommandLog: false
 git:
   branchLogCmd: "git lg {{branchName}} --"
-  paging:
-    externalDiffCommand: difft
+  pagers:
+    - externalDiffCommand: difft
 customCommands:
   - key: "n"
     context: "localBranches"
