--- a/dot_aerospace.toml
+++ b/dot_aerospace.toml
@@ -104,6 +104,7 @@ PATH = '/opt/homebrew/bin:/opt/homebrew/sbin:${PATH}'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#exec-and-forget
 alt-w = 'exec-and-forget open -n /Applications/WezTerm.app/'
+alt-x = 'exec-and-forget open -n /Applications/Ghostty.app/'
 alt-t = 'exec-and-forget open -n /Applications/Telegram\ Desktop.app/'
 alt-f = 'exec-and-forget open -n /Applications/Firefox\ Developer\ Edition.app/'
 alt-c = 'exec-and-forget open -n /Applications/Google\ Chrome.app/'
@@ -111,7 +112,7 @@ alt-m = 'exec-and-forget open -n /Applications/MEGAsync.app/'
 alt-s = 'exec-and-forget open -n /Applications/Slack.app/'
 alt-p = 'exec-and-forget open -n /Applications/KeePassXC.app/'
 
-f10 = "exec-and-forget zsh ~/scripts/aerospace-resize-neovide.sh"
+f7 = "exec-and-forget zsh ~/scripts/aerospace-resize-neovide.sh"
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#layout
 alt-slash = 'layout tiles horizontal vertical'
@@ -210,6 +211,12 @@ alt-shift-l = [
   'exec-and-forget sketchybar --trigger aerospace_leave_service_mode',
 ]
 
+[[on-window-detected]]
+if.app-id="com.mitchellh.ghostty"
+run= [
+  "layout tiling","move-node-to-workspace 1"
+]
+
 # [[on-window-detected]]
 # if.app-name-regex-substring = 'neovide'
 # run = 'move-node-to-workspace 2'
@@ -228,10 +235,8 @@ if.app-id = 'com.tinyspeck.slackmacgap'
 run = 'move-node-to-workspace 4'
 
 [[on-window-detected]]
-if.app-name-regex-substring = 'firefox'
-run = [
-  "move-node-to-workspace 2",
-]
+if.app-name-regex-substring = 'Zen'
+run =  "move-node-to-workspace 2"
 
 [[on-window-detected]]
 if.app-name-regex-substring = 'cursor'
