--- a/dot_config/lazygit/config.yml
+++ b/dot_config/lazygit/config.yml
@@ -1,7 +1,7 @@
 promptToReturnFromSubprocess: false
 os:
   # https://github.com/jesseduffield/lazygit/issues/3064
-  openLink: open -n "$(echo {{link}} | sed 's/%2F/\//g')"
+  openLink: open -a "Zen Browser" "$(echo {{link}} | sed 's/%2F/\//g')"
   edit: "nvr --remote-tab-wait +'setl bufhidden=wipe' {{filename}}"
   editAtLine: "nvr --remote-tab-wait +'setl bufhidden=wipe | {{line}}' {{filename}}"
   editAtLineAndWait: "nvr --remote-tab-wait +'setl bufhidden=wipe | {{line}}' {{filename}}"
