--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -1,21 +1,149 @@
 # vi: ft=conf
+# Ghostty configuration converted from WezTerm
+# Original WezTerm config features: Catppuccin themes, JetBrains Mono font, 
+# advanced keybindings, pane management, and workspace switching
 
-adjust-box-thickness = 150%
-adjust-cell-height = 21
-adjust-cursor-height = 47%
-cursor-invert-fg-bg = true
+# -- TERMINAL BEHAVIOR -------------------------------------------------------------------------------------------------
 command = /opt/homebrew/opt/fish/bin/fish --login --interactive
+term = xterm-256color
+
+# -- WINDOW SETTINGS ---------------------------------------------------------------------------------------------------
+maximize = true
 confirm-close-surface = false
-font-family = "JetBrainsMono NFM"
-font-size = 16
+window-decoration = auto
+window-padding-x = 0
+window-padding-y = 0
 macos-titlebar-style = "hidden"
-mouse-hide-while-typing = true
 quit-after-last-window-closed = true
-theme = "dark:catppuccin-mocha,light:catppuccin-latte"
-window-padding-x = 0,0 
-window-padding-y = 0,0 
+
+# -- QUICK TERMINAL ----------------------------------------------------------------------------------------------------
+quick-terminal-animation-duration = 0.1
+
+# -- SCROLLING & BUFFER ------------------------------------------------------------------------------------------------
+scrollback-limit = 10000
+
+# -- CLIPBOARD SETTINGS ------------------------------------------------------------------------------------------------
+clipboard-read = allow
+clipboard-write = allow
+copy-on-select = true
+
+# -- APPEARANCE & THEMES -----------------------------------------------------------------------------------------------
+background-opacity = 0.9
+theme = "dark:Catppuccin Mocha,light:Catppuccin Latte"
+
+# -- CURSOR SETTINGS ---------------------------------------------------------------------------------------------------
+cursor-invert-fg-bg = true
+cursor-style = "bar"
+cursor-style-blink = false
+adjust-cursor-height = 47%
+
+# -- FONT CONFIGURATION ------------------------------------------------------------------------------------------------
+font-size = 15
+font-family = "JetBrains Mono"
+font-codepoint-map = U+E0A0-U+E0A3,U+E0B0-U+E0C8,U+E0CA,U+E0CC-U+E0D2,U+E0D4="JetBrainsMono NFM"
+font-variation = wght=500
+
+# -- ADVANCED SETTINGS -------------------------------------------------------------------------------------------------
+adjust-cell-height = 15
+adjust-box-thickness = 120%
+
+# -- MOUSE SETTINGS ----------------------------------------------------------------------------------------------------
+mouse-hide-while-typing = true
 
 # -- KEYBINDINGS -------------------------------------------------------------------------------------------------------
-
+# Global quick terminal toggle
 keybind = global:alt+escape=toggle_quick_terminal
+
+# Terminal-specific keybindings
 keybind = ctrl+m=text:\x0D
+
+# Pane navigation (similar to WezTerm's Ctrl+hjkl)
+keybind = ctrl+h=goto_split:left
+keybind = ctrl+j=goto_split:down
+keybind = ctrl+k=goto_split:up
+keybind = ctrl+l=goto_split:right
+
+# Pane creation (Leader key simulation with Ctrl+S prefix)
+# Note: Ghostty doesn't have a leader key concept, so we use direct bindings
+keybind = ctrl+shift+backslash=new_split:right
+keybind = ctrl+shift+minus=new_split:down
+
+# Tab management
+keybind = ctrl+shift+t=new_tab
+keybind = ctrl+shift+w=close_surface
+
+# Scrolling (vim-like)
+keybind = ctrl+u=scroll_page_up
+keybind = ctrl+d=scroll_page_down
+keybind = ctrl+g=scroll_to_top
+keybind = ctrl+shift+g=scroll_to_bottom
+
+# Copy mode and selection
+keybind = ctrl+shift+space=toggle_split_zoom
+
+# Additional keybindings to approximate WezTerm functionality
+# Note: Some WezTerm features like workspaces, leader keys, and custom actions
+# are not directly available in Ghostty. These are approximations.
+
+# Quick select mode (similar to WezTerm's QuickSelect)
+# Note: quick_select action doesn't exist in Ghostty, using select_all instead
+keybind = ctrl+shift+f=select_all
+
+# Close current pane/tab
+keybind = ctrl+shift+x=close_surface
+
+# Zoom/unzoom current pane
+keybind = ctrl+shift+z=toggle_split_zoom
+
+# New window
+keybind = ctrl+shift+n=new_window
+
+# Reload configuration
+keybind = ctrl+shift+comma=reload_config
+
+keybind = shift+up=scroll_page_lines:-25
+keybind = shift+down=scroll_page_lines:26
+keybind = ctrl+с=text:\x03
+keybind = shift+enter=text:\x1b\r
+
+# -- ICON -------------------------------------------------------------------------------------------------------------
+macos-icon = xray
+macos-icon-frame = aluminum
+macos-icon-ghost-color = #67C243
+macos-icon-screen-color = #000000
+
+# -- NOTES ON MISSING FEATURES ----------------------------------------------------------------------------------------
+# The following WezTerm features are not directly available in Ghostty:
+# 
+# 1. Leader key functionality (Ctrl+S prefix in WezTerm)
+#    - Ghostty doesn't support leader keys, so we use direct key combinations
+#
+# 2. Workspace management (WezTerm's workspace switching)
+#    - Ghostty doesn't have workspace concept, use multiple windows instead
+#
+# 3. Custom Lua scripting and event handlers
+#    - Ghostty doesn't support custom scripting
+#    - Theme switching based on OS appearance is handled by the theme setting
+#
+# 4. Advanced hyperlink rules and custom actions
+#    - Ghostty has basic hyperlink support but not custom rules
+#
+# 5. Multiplexer support (WezTerm's mux)
+#    - Ghostty doesn't have built-in multiplexer support
+#
+# 6. Custom color scheme modifications
+#    - Ghostty uses predefined themes, custom modifications not supported
+#
+# 7. Font fallback chains
+#    - Ghostty handles font fallbacks automatically
+#
+# 8. Advanced mouse bindings
+#    - Ghostty has limited mouse binding customization
+#
+# 9. Status bar customization
+#    - Ghostty doesn't support custom status bars
+#
+# 10. ZEN_MODE and dynamic font size changes
+#     - Not supported in Ghostty
+
+# Config generated by Ghostty Config
