--- a/dot_aerospace.toml
+++ b/dot_aerospace.toml
@@ -109,8 +109,9 @@ alt-t = 'exec-and-forget open -n /Applications/Telegram\ Desktop.app/'
 alt-f = 'exec-and-forget open -n /Applications/Firefox\ Developer\ Edition.app/'
 alt-c = 'exec-and-forget open -n /Applications/Google\ Chrome.app/'
 alt-m = 'exec-and-forget open -n /Applications/MEGAsync.app/'
-alt-s = 'exec-and-forget open -n /Applications/Slack.app/'
+alt-s = 'exec-and-forget open -a "Slack"'
 alt-p = 'exec-and-forget open -n /Applications/KeePassXC.app/'
+alt-q = 'exec-and-forget /bin/bash -c "aerospace list-windows --all --format \"%{window-id} %{app-name}\" | grep GlobalProtect | awk \"{print \\$1}\" | xargs -I {} aerospace close --window-id {}"'
 
 f7 = "exec-and-forget zsh ~/scripts/aerospace-resize-neovide.sh"
 
@@ -210,17 +211,12 @@ alt-shift-l = [
   'mode main',
   'exec-and-forget sketchybar --trigger aerospace_leave_service_mode',
 ]
-
+  
 [[on-window-detected]]
 if.app-id="com.mitchellh.ghostty"
 run= [
   "layout tiling","move-node-to-workspace 1"
 ]
-
-# [[on-window-detected]]
-# if.app-name-regex-substring = 'neovide'
-# run = 'move-node-to-workspace 2'
-
 
 [[on-window-detected]]
 if.app-id = 'com.google.Chrome'
@@ -240,4 +236,4 @@ run =  "move-node-to-workspace 2"
 
 [[on-window-detected]]
 if.app-name-regex-substring = 'cursor'
-run = 'move-node-to-workspace 8'
+run = 'move-node-to-workspace 1'
